--- a/src/lib/i18n/locales/ca-ES/translation.json
+++ b/src/lib/i18n/locales/ca-ES/translation.json
@@ -66,7 +66,7 @@
 	"Additional Config": "Configuració addicional",
 	"Additional configuration options for marker. This should be a JSON string with key-value pairs. For example, '{\"key\": \"value\"}'. Supported keys include: disable_links, keep_pageheader_in_output, keep_pagefooter_in_output, filter_blank_pages, drop_repeated_text, layout_coverage_threshold, merge_threshold, height_tolerance, gap_threshold, image_threshold, min_line_length, level_count, default_level": "Opcions de configuració addicionals per al marcador. Hauria de ser una cadena JSON amb parelles clau-valor. Per exemple, '{\"key\": \"value\"}'. Les claus compatibles inclouen: disable_links, keep_pageheader_in_output, keep_pagefooter_in_output, filter_blank_pages, drop_repeated_text, layout_coverage_threshold, merge_threshold, height_tolerance, gap_threshold, image_threshold, min_line_length, level_count, default_level",
 	"Additional Parameters": "Paràmetres addicionals",
-	"Adds filenames, titles, sections, and snippets into the BM25 text to improve lexical recall.": "",
+	"Adds filenames, titles, sections, and snippets into the BM25 text to improve lexical recall.": "Afegeix noms de fitxer, títols, seccions i fragments al text BM25 per millorar la recuperació lèxica.",
 	"Adjusting these settings will apply changes universally to all users.": "Si ajustes aquesta preferència, els canvis s'aplicaran de manera universal a tots els usuaris.",
 	"admin": "administrador",
 	"Admin": "Administrador",
@@ -131,7 +131,7 @@
 	"API Key created.": "clau API creada.",
 	"API Key Endpoint Restrictions": "Restriccions del punt d'accés de la Clau API",
 	"API keys": "Claus de l'API",
-	"API Keys": "",
+	"API Keys": "Claus de l'API",
 	"API Mode": "Mode API",
 	"API Version": "Versió de l'API",
 	"API Version is required": "Versió API requerida",
@@ -379,7 +379,7 @@
 	"Datalab Marker API": "API de Datalab Marker",
 	"DD/MM/YYYY": "DD/MM/YYYY",
 	"December": "Desembre",
-	"Decrease UI Scale": "",
+	"Decrease UI Scale": "Disminuir la mida de la interfície gràfica",
 	"Deepgram": "Deepgram",
 	"Default": "Per defecte",
 	"Default (Open AI)": "Per defecte (Open AI)",
@@ -458,7 +458,7 @@
 	"Do not install functions from sources you do not fully trust.": "No instal·lis funcions de fonts en què no confiïs plenament.",
 	"Do not install tools from sources you do not fully trust.": "No instal·lis eines de fonts en què no confiïs plenament.",
 	"Docling": "Docling",
-	"Docling Parameters": "",
+	"Docling Parameters": "Paràmetres de Docling",
 	"Docling Server URL required.": "La URL del servidor Docling és necessària",
 	"Document": "Document",
 	"Document Intelligence": "Document Intelligence",
@@ -520,7 +520,7 @@
 	"Embedding Model": "Model d'incrustació",
 	"Embedding Model Engine": "Motor de model d'incrustació",
 	"Embedding model set to \"{{embedding_model}}\"": "Model d'incrustació configurat a \"{{embedding_model}}\"",
-	"Enable API Keys": "",
+	"Enable API Keys": "Permetre claus API",
 	"Enable autocomplete generation for chat messages": "Activar la generació automàtica per als missatges del xat",
 	"Enable Code Execution": "Permetre l'execució de codi",
 	"Enable Code Interpreter": "Activar l'intèrpret de codi",
@@ -536,14 +536,14 @@
 	"Endpoint URL": "URL de connexió",
 	"Enforce Temporary Chat": "Forçar els xats temporals",
 	"Enhance": "Millorar",
-	"Enrich Hybrid Search Text": "",
+	"Enrich Hybrid Search Text": "Enriquir el text de cerca híbrid",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Assegura't que els teus fitxers CSV inclouen 4 columnes en aquest ordre: Nom, Correu electrònic, Contrasenya, Rol.",
 	"Enter {{role}} message here": "Introdueix aquí el missatge de {{role}}",
 	"Enter a detail about yourself for your LLMs to recall": "Introdueix un detall sobre tu què els teus models de llenguatge puguin recordar",
 	"Enter a title for the pending user info overlay. Leave empty for default.": "Introdueix un títol per a la finestra de dades d'usuari pendent. Deixa buit per a valor per defecte.",
 	"Enter a watermark for the response. Leave empty for none.": "Introdueix una marca d'aigua per a la resposta. Deixa-ho buit per a cap.",
 	"Enter additional headers in JSON format": "Introdueix capçaleres addicionals en format JSON",
-	"Enter additional headers in JSON format (e.g. {\"X-Custom-Header\": \"value\"}": "",
+	"Enter additional headers in JSON format (e.g. {\"X-Custom-Header\": \"value\"}": "Introduïeix capçaleres addicionals en format JSON (per exemple, {\"X-Custom-Header\": \"value\"}",
 	"Enter additional parameters in JSON format": "Introdueix paràmetres addicionals en format JSON",
 	"Enter api auth string (e.g. username:password)": "Entra la cadena d'autenticació api (p. ex. nom d'usuari:contrasenya)",
 	"Enter Application DN": "Introdueix el DN d'aplicació",
@@ -567,7 +567,7 @@
 	"Enter Docling Server URL": "Introdueix la URL del servidor Docling",
 	"Enter Document Intelligence Endpoint": "Introdueix el punt de connexió de Document Intelligence",
 	"Enter Document Intelligence Key": "Introdueix la clau de Document Intelligence",
-	"Enter domains separated by commas (e.g., example.com,site.org,!excludedsite.com)": "",
+	"Enter domains separated by commas (e.g., example.com,site.org,!excludedsite.com)": "Introdueix dominis separats per comes (per exemple, example.com, lloc.org, !excludedsite.com)",
 	"Enter Exa API Key": "Introdueix la clau API de d'EXA",
 	"Enter External Document Loader API Key": "Introdueix la clau API de Document Loader",
 	"Enter External Document Loader URL": "Introdueix la URL de Document Loader",
@@ -603,7 +603,7 @@
 	"Enter Number of Steps (e.g. 50)": "Introdueix el nombre de passos (p. ex. 50)",
 	"Enter Ollama Cloud API Key": "Introdueix la clau API de Ollama Cloud",
 	"Enter Perplexity API Key": "Introdueix la clau API de Perplexity",
-	"Enter Perplexity Search API URL": "",
+	"Enter Perplexity Search API URL": "Introduïu l'URL de l'API de cerca de Perplexity",
 	"Enter Playwright Timeout": "Introdueix el timeout de Playwright",
 	"Enter Playwright WebSocket URL": "Introdueix la URL de Playwright WebSocket",
 	"Enter proxy URL (e.g. https://user:password@host:port)": "Entra la URL (p. ex. https://user:password@host:port)",
@@ -689,12 +689,12 @@
 	"Export chat (.json)": "Exportar el xat (.json)",
 	"Export Chats": "Exportar els xats",
 	"Export Config to JSON File": "Exportar la configuració a un arxiu JSON",
-	"Export Models": "",
+	"Export Models": "Exportar els models",
 	"Export Presets": "Exportar les configuracions",
 	"Export Prompt Suggestions": "Exportar els suggeriments d'indicació",
-	"Export Prompts": "",
+	"Export Prompts": "Exportar les indicacions",
 	"Export to CSV": "Exportar a CSV",
-	"Export Tools": "",
+	"Export Tools": "Exportar les eines",
 	"Export Users": "Exportar els usuaris",
 	"External": "Extern",
 	"External Document Loader URL required.": "Fa falta la URL per a Document Loader",
@@ -871,20 +871,20 @@
 	"Import Chats": "Importar xats",
 	"Import Config from JSON File": "Importar la configuració des d'un arxiu JSON",
 	"Import From Link": "Importar des d'un enllaç",
-	"Import Models": "",
+	"Import Models": "Importar models",
 	"Import Notes": "Importar nota",
 	"Import Presets": "Importar configuracions",
 	"Import Prompt Suggestions": "Importar suggeriments d'indicacions",
-	"Import Prompts": "",
+	"Import Prompts": "Importar indicacions",
 	"Import successful": "Importació correcta",
-	"Import Tools": "",
+	"Import Tools": "Importar eines",
 	"Important Update": "Actualització important",
 	"In order to force OCR, performing OCR must be enabled.": "Per forçar l'OCR, cal activar l'OCR.",
 	"Include": "Incloure",
 	"Include `--api-auth` flag when running stable-diffusion-webui": "Inclou `--api-auth` quan executis stable-diffusion-webui",
 	"Include `--api` flag when running stable-diffusion-webui": "Inclou `--api` quan executis stable-diffusion-webui",
 	"Includes SharePoint": "Inclou SharePoint",
-	"Increase UI Scale": "",
+	"Increase UI Scale": "Incrementar l'escala de la interfície gràfica",
 	"Influences how quickly the algorithm responds to feedback from the generated text. A lower learning rate will result in slower adjustments, while a higher learning rate will make the algorithm more responsive.": "Influeix amb la rapidesa amb què l'algoritme respon als comentaris del text generat. Una taxa d'aprenentatge més baixa donarà lloc a ajustos més lents, mentre que una taxa d'aprenentatge més alta farà que l'algorisme sigui més sensible.",
 	"Info": "Informació",
 	"Initials": "Inicials",
@@ -907,7 +907,7 @@
 	"Invalid JSON format for ComfyUI Edit Workflow.": "Format JSON no vàlid per al Workflow de ComfyUI d'edició",
 	"Invalid JSON format for ComfyUI Workflow.": "Arxiu JSON de Workflow ComfyUI no vàlid.",
 	"Invalid JSON format for Parameters": "JSON de paràmetres no vàlid",
-	"Invalid JSON format in {{NAME}}": "",
+	"Invalid JSON format in {{NAME}}": "Format JSON no vàlid a {{NAME}}",
 	"Invalid JSON format in Additional Config": "Format JSON no vàlid a la configuració addicional",
 	"Invalid JSON format in MinerU Parameters": "Format JSON no vàlid en els paràmetres de MinerU",
 	"Invalid Tag": "Etiqueta no vàlida",
@@ -1213,7 +1213,7 @@
 	"Permissions": "Permisos",
 	"Perplexity API Key": "Clau API de Perplexity",
 	"Perplexity Model": "Model de Perplexity",
-	"Perplexity Search API URL": "",
+	"Perplexity Search API URL": "URL API per a Perplexity Search",
 	"Perplexity Search Context Usage": "Utilització del context de cerca de Perplexity",
 	"Personalization": "Personalització",
 	"Picture Description API Config": "Configuració de l'API de la descripció d'imatges",
@@ -1653,7 +1653,7 @@
 	"Type Hugging Face Resolve (Download) URL": "Escriu la URL de Resolució (Descàrrega) de Hugging Face",
 	"Uh-oh! There was an issue with the response.": "Vaja! Hi ha hagut una incidència amb la resposta.",
 	"UI": "UI",
-	"UI Scale": "",
+	"UI Scale": "Mida de la interfície gràfica",
 	"Unarchive All": "Desarxivar tot",
 	"Unarchive All Archived Chats": "Desarxivar tots els xats arxivats",
 	"Unarchive Chat": "Desarxivar xat",
@@ -1727,8 +1727,8 @@
 	"Voice": "Veu",
 	"Voice Input": "Entrada de veu",
 	"Voice mode": "Mode de veu",
-	"Voice Mode Custom Prompt": "",
-	"Voice Mode Prompt": "",
+	"Voice Mode Custom Prompt": "Indicació personalitzada per al mode de veu",
+	"Voice Mode Prompt": "Indicació per al mode de veu",
 	"Warning": "Avís",
 	"Warning:": "Avís:",
 	"Warning: Enabling this will allow users to upload arbitrary code on the server.": "Avís: Habilitar això permetrà als usuaris penjar codi arbitrari al servidor.",
