--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -66,7 +66,7 @@
 	"Additional Config": "Zusätzliche Konfiguration",
 	"Additional configuration options for marker. This should be a JSON string with key-value pairs. For example, '{\"key\": \"value\"}'. Supported keys include: disable_links, keep_pageheader_in_output, keep_pagefooter_in_output, filter_blank_pages, drop_repeated_text, layout_coverage_threshold, merge_threshold, height_tolerance, gap_threshold, image_threshold, min_line_length, level_count, default_level": "Zusätzliche Konfigurationsoptionen für den Marker. Dies sollte eine JSON-Zeichenfolge mit Schlüssel-Wert-Paaren sein. Zum Beispiel '{\"key\": \"value\"}'. Unterstützte Schlüssel sind: disable_links, keep_pageheader_in_output, keep_pagefooter_in_output, filter_blank_pages, drop_repeated_text, layout_coverage_threshold, merge_threshold, height_tolerance, gap_threshold, image_threshold, min_line_length, level_count, default_level",
 	"Additional Parameters": "Weitere Parameter",
-	"Adds filenames, titles, sections, and snippets into the BM25 text to improve lexical recall.": "",
+	"Adds filenames, titles, sections, and snippets into the BM25 text to improve lexical recall.": "Fügt Dateinamen, Titel, Abschnitte und Textausschnitte in den BM25-Text ein, um den lexikalischen Recall zu verbessern.",
 	"Adjusting these settings will apply changes universally to all users.": "Das Anpassen dieser Einstellungen wird Änderungen universell auf alle Benutzer anwenden.",
 	"admin": "Administrator",
 	"Admin": "Administrator",
@@ -131,7 +131,7 @@
 	"API Key created.": "API-Schlüssel erstellt.",
 	"API Key Endpoint Restrictions": "API-Schlüssel Endpunkteinschränkungen",
 	"API keys": "API-Schlüssel",
-	"API Keys": "",
+	"API Keys": "API-Schlüssel",
 	"API Mode": "API-Modus",
 	"API Version": "API Version",
 	"API Version is required": "API-Version ist erforderlich",
@@ -379,7 +379,7 @@
 	"Datalab Marker API": "Datalab Marker API",
 	"DD/MM/YYYY": "TT/MM/JJJJ",
 	"December": "Dezember",
-	"Decrease UI Scale": "",
+	"Decrease UI Scale": "UI-Größe verringern",
 	"Deepgram": "Deepgram",
 	"Default": "Standard",
 	"Default (Open AI)": "Standard (Open AI)",
@@ -520,7 +520,7 @@
 	"Embedding Model": "Embedding-Modell",
 	"Embedding Model Engine": "Embedding-Modell-Engine",
 	"Embedding model set to \"{{embedding_model}}\"": "Embedding-Modell auf \"{{embedding_model}}\" gesetzt",
-	"Enable API Keys": "",
+	"Enable API Keys": "API-Schlüssel aktivieren",
 	"Enable autocomplete generation for chat messages": "Automatische Vervollständigung für Chat-Nachrichten aktivieren",
 	"Enable Code Execution": "Codeausführung aktivieren",
 	"Enable Code Interpreter": "Code-Interpreter aktivieren",
@@ -536,7 +536,7 @@
 	"Endpoint URL": "Endpunkt-URL",
 	"Enforce Temporary Chat": "Temporären Chat erzwingen",
 	"Enhance": "Verbessern",
-	"Enrich Hybrid Search Text": "",
+	"Enrich Hybrid Search Text": "Hybrid-Suchtext anreichern",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Stellen Sie sicher, dass Ihre CSV-Datei 4 Spalten in dieser Reihenfolge enthält: Name, E-Mail, Passwort, Rolle.",
 	"Enter {{role}} message here": "Geben Sie die {{role}}-Nachricht hier ein",
 	"Enter a detail about yourself for your LLMs to recall": "Geben Sie ein Detail über sich selbst ein, das Ihre Sprachmodelle (LLMs) sich merken sollen",
@@ -567,7 +567,7 @@
 	"Enter Docling Server URL": "Docling Server-URL eingeben",
 	"Enter Document Intelligence Endpoint": "Endpunkt für Document Intelligence eingeben",
 	"Enter Document Intelligence Key": "Schlüssel für Document Intelligence eingeben",
-	"Enter domains separated by commas (e.g., example.com,site.org,!excludedsite.com)": "",
+	"Enter domains separated by commas (e.g., example.com,site.org,!excludedsite.com)": "Kommaseparierte Domainnamen eingeben (z.B., erlaubteseite.com,!gesperrteseite.org)",
 	"Enter Exa API Key": "Geben Sie den Exa-API-Schlüssel ein",
 	"Enter External Document Loader API Key": "API-Schlüssel für externen Dokumenten-Loader eingeben",
 	"Enter External Document Loader URL": "URL für externen Dokumenten-Loader eingeben",
@@ -689,12 +689,12 @@
 	"Export chat (.json)": "Chat exportieren (.json)",
 	"Export Chats": "Chats exportieren",
 	"Export Config to JSON File": "Exportiere Konfiguration als JSON-Datei",
-	"Export Models": "",
+	"Export Models": "Modelle exportieren",
 	"Export Presets": "Voreinstellungen exportieren",
 	"Export Prompt Suggestions": "Prompt-Vorschläge exportieren",
-	"Export Prompts": "",
+	"Export Prompts": "Prompts exportieren",
 	"Export to CSV": "Als CSV exportieren",
-	"Export Tools": "",
+	"Export Tools": "Werkzeuge exportieren",
 	"Export Users": "Benutzer exportieren",
 	"External": "Extern",
 	"External Document Loader URL required.": "URL für externen Dokumenten-Loader erforderlich.",
@@ -871,20 +871,20 @@
 	"Import Chats": "Chats importieren",
 	"Import Config from JSON File": "Konfiguration aus JSON-Datei importieren",
 	"Import From Link": "Von Link importieren",
-	"Import Models": "",
+	"Import Models": "Modelle importieren",
 	"Import Notes": "Notizen importieren",
 	"Import Presets": "Voreinstellungen importieren",
 	"Import Prompt Suggestions": "Prompt-Vorschläge importieren",
-	"Import Prompts": "",
+	"Import Prompts": "Prompts importieren",
 	"Import successful": "Import erfolgreich",
-	"Import Tools": "",
+	"Import Tools": "Werkzeuge importieren",
 	"Important Update": "Wichtiges Update",
 	"In order to force OCR, performing OCR must be enabled.": "Um die OCR erzwingen zu können, muss die Durchführung der OCR aktiviert sein.",
 	"Include": "Einschließen",
 	"Include `--api-auth` flag when running stable-diffusion-webui": "Fügen Sie beim Ausführen von stable-diffusion-webui die Option `--api-auth` hinzu",
 	"Include `--api` flag when running stable-diffusion-webui": "Fügen Sie beim Ausführen von stable-diffusion-webui die Option `--api` hinzu",
 	"Includes SharePoint": "Enthält SharePoint",
-	"Increase UI Scale": "",
+	"Increase UI Scale": "UI-Größe erhöhen",
 	"Influences how quickly the algorithm responds to feedback from the generated text. A lower learning rate will result in slower adjustments, while a higher learning rate will make the algorithm more responsive.": "Beeinflusst, wie schnell der Algorithmus auf Feedback aus dem generierten Text reagiert. Eine niedrigere Lernrate führt zu langsameren Anpassungen, während eine höhere Lernrate den Algorithmus reaktionsschneller macht.",
 	"Info": "Info",
 	"Initials": "Initialen",
@@ -1146,12 +1146,12 @@
 	"Ollama Version": "Ollama-Version",
 	"On": "Ein",
 	"OneDrive": "OneDrive",
-	"Only active when \"Paste Large Text as File\" setting is toggled on.": "",
-	"Only active when the chat input is in focus and an LLM is generating a response.": "",
-	"Only active when the chat input is in focus.": "",
+	"Only active when \"Paste Large Text as File\" setting is toggled on.": "Nur aktiv, wenn die Einstellung „Großen Text als Datei einfügen“ aktiviert ist.",
+	"Only active when the chat input is in focus and an LLM is generating a response.": "Nur aktiv, wenn das Chat-Eingabefeld fokussiert ist und ein LLM eine Antwort generiert.",
+	"Only active when the chat input is in focus.": "Nur aktiv, wenn das Chat-Eingabefeld fokussiert ist.",
 	"Only alphanumeric characters and hyphens are allowed": "Nur alphanumerische Zeichen und Bindestriche sind erlaubt",
 	"Only alphanumeric characters and hyphens are allowed in the command string.": "In der Befehlszeichenfolge sind nur alphanumerische Zeichen und Bindestriche erlaubt.",
-	"Only can be triggered when the chat input is in focus.": "",
+	"Only can be triggered when the chat input is in focus.": "Kann nur ausgelöst werden, wenn das Chat-Eingabefeld fokussiert ist."
 	"Only collections can be edited, create a new knowledge base to edit/add documents.": "Nur Sammlungen können bearbeitet werden. Erstellen Sie eine neue Wissensbasis, um Dokumente zu bearbeiten/hinzuzufügen.",
 	"Only markdown files are allowed": "Nur Markdown-Dateien sind erlaubt",
 	"Only select users and groups with permission can access": "Nur ausgewählte Benutzer und Gruppen mit Berechtigung können darauf zugreifen",
@@ -1652,7 +1652,7 @@
 	"Type Hugging Face Resolve (Download) URL": "Geben Sie die Hugging Face Resolve-URL ein",
 	"Uh-oh! There was an issue with the response.": "Oh nein! Es gab ein Problem mit der Antwort.",
 	"UI": "Oberfläche",
-	"UI Scale": "",
+	"UI Scale": "UI-Größe",
 	"Unarchive All": "Alle wiederherstellen",
 	"Unarchive All Archived Chats": "Alle archivierten Chats wiederherstellen",
 	"Unarchive Chat": "Chat wiederherstellen",
@@ -1726,8 +1726,8 @@
 	"Voice": "Stimme",
 	"Voice Input": "Spracheingabe",
 	"Voice mode": "Sprachmodus",
-	"Voice Mode Custom Prompt": "",
-	"Voice Mode Prompt": "",
+	"Voice Mode Custom Prompt": "Anruf-Modus benutzerdefinierter Prompt",
+	"Voice Mode Prompt": "Anruf-Modus Prompt",
 	"Warning": "Warnung",
 	"Warning:": "Warnung:",
 	"Warning: Enabling this will allow users to upload arbitrary code on the server.": "Warnung: Wenn Sie dies aktivieren, können Benutzer beliebigen Code auf dem Server hochladen.",
