--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -1151,7 +1151,7 @@
 	"Only active when the chat input is in focus.": "Nur aktiv, wenn das Chat-Eingabefeld fokussiert ist.",
 	"Only alphanumeric characters and hyphens are allowed": "Nur alphanumerische Zeichen und Bindestriche sind erlaubt",
 	"Only alphanumeric characters and hyphens are allowed in the command string.": "In der Befehlszeichenfolge sind nur alphanumerische Zeichen und Bindestriche erlaubt.",
-	"Only can be triggered when the chat input is in focus.": "Kann nur ausgelöst werden, wenn das Chat-Eingabefeld fokussiert ist."
+	"Only can be triggered when the chat input is in focus.": "Kann nur ausgelöst werden, wenn das Chat-Eingabefeld fokussiert ist.",
 	"Only collections can be edited, create a new knowledge base to edit/add documents.": "Nur Sammlungen können bearbeitet werden. Erstellen Sie eine neue Wissensbasis, um Dokumente zu bearbeiten/hinzuzufügen.",
 	"Only markdown files are allowed": "Nur Markdown-Dateien sind erlaubt",
 	"Only select users and groups with permission can access": "Nur ausgewählte Benutzer und Gruppen mit Berechtigung können darauf zugreifen",
