--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -32,7 +32,6 @@
 	"Accessible to all users": "Für alle Benutzer zugänglich",
 	"Account": "Konto",
 	"Account Activation Pending": "Kontoaktivierung ausstehend",
-	"accurate": "präzise",
 	"Accurate information": "Präzise Information(en)",
 	"Action": "Aktion",
 	"Action not found": "Aktion nicht gefunden",
@@ -124,10 +123,8 @@
 	"and {{COUNT}} more": "und {{COUNT}} mehr",
 	"and create a new shared link.": "und erstellen Sie einen neuen freigegebenen Link.",
 	"Android": "Android",
-	"API": "API",
 	"API Base URL": "API-Basis-URL",
 	"API Base URL for Datalab Marker service. Defaults to: https://www.datalab.to/api/v1/marker": "API-Basis-URL für den Datalab-Marker-Dienst. Standardwert: https://www.datalab.to/api/v1/marker",
-	"API details for using a vision-language model in the picture description. This parameter is mutually exclusive with picture_description_local.": "API-Details zur Verwendung eines Vision-Language-Modells in der Bildbeschreibung. Dieser Parameter schließt sich mit picture_description_local gegenseitig aus.",
 	"API Key": "API-Schlüssel",
 	"API Key created.": "API-Schlüssel erstellt.",
 	"API Key Endpoint Restrictions": "API-Schlüssel Endpunkteinschränkungen",
@@ -155,6 +152,7 @@
 	"Ask": "Fragen",
 	"Ask a question": "Stellen Sie eine Frage",
 	"Assistant": "Assistent",
+	"Async Embedding Processing": "",
 	"Attach File From Knowledge": "Datei von Wissensspeicher hinzufügen",
 	"Attach Knowledge": "Wissensspeicher anhängen",
 	"Attach Notes": "Notizen anhängen",
@@ -202,7 +200,6 @@
 	"Bocha Search API Key": "Bocha Search API-Schlüssel",
 	"Bold": "Fett",
 	"Boosting or penalizing specific tokens for constrained responses. Bias values will be clamped between -100 and 100 (inclusive). (Default: none)": "Verstärkung oder Bestrafung spezifischer Token für eingeschränkte Antworten. Bias-Werte werden zwischen -100 und 100 (einschließlich) begrenzt. (Standard: keine)",
-	"Both Docling OCR Engine and Language(s) must be provided or both left empty.": "Entweder müssen Docling OCR-Engine und Sprache(n) angegeben oder beide leer gelassen werden.",
 	"Brave Search API Key": "Brave Search API-Schlüssel",
 	"Bullet List": "Aufzählungsliste",
 	"Button ID": "Schaltflächen-ID",
@@ -424,7 +421,6 @@
 	"Deleted {{name}}": "{{name}} gelöscht",
 	"Deleted User": "Benutzer gelöscht",
 	"Deployment names are required for Azure OpenAI": "Deployment-Namen sind für Azure OpenAI erforderlich.",
-	"Describe Pictures in Documents": "Bilder in Dokumenten beschreiben",
 	"Describe your knowledge base and objectives": "Beschreiben Sie Ihren Wissensspeicher und Ihre Ziele",
 	"Description": "Beschreibung",
 	"Detect Artifacts Automatically": "Artefakte automatisch erkennen",
@@ -457,9 +453,6 @@
 	"Displays citations in the response": "Zeigt Zitate in der Antwort an",
 	"Displays status updates (e.g., web search progress) in the response": "Zeigt Statusaktualisierungen (z.\u202fB. Fortschritt der Websuche) in der Antwort an",
 	"Dive into knowledge": "Tauchen Sie in das Wissen ein",
-	"dlparse_v1": "dlparse_v1",
-	"dlparse_v2": "dlparse_v2",
-	"dlparse_v4": "dlparse_v4",
 	"Do not install functions from sources you do not fully trust.": "Installieren Sie keine Funktionen aus Quellen, denen Sie nicht vollständig vertrauen.",
 	"Do not install tools from sources you do not fully trust.": "Installieren Sie keine Werkzeuge aus Quellen, denen Sie nicht vollständig vertrauen.",
 	"Docling": "Docling",
@@ -524,7 +517,6 @@
 	"Embedding Batch Size": "Embedding-Stapelgröße",
 	"Embedding Model": "Embedding-Modell",
 	"Embedding Model Engine": "Embedding-Modell-Engine",
-	"Embedding model set to \"{{embedding_model}}\"": "Embedding-Modell auf \"{{embedding_model}}\" gesetzt",
 	"Enable API Keys": "API-Schlüssel aktivieren",
 	"Enable autocomplete generation for chat messages": "Automatische Vervollständigung für Chat-Nachrichten aktivieren",
 	"Enable Code Execution": "Codeausführung aktivieren",
@@ -561,14 +553,12 @@
 	"Enter Chunk Overlap": "Geben Sie die Blocküberlappung ein",
 	"Enter Chunk Size": "Geben Sie die Blockgröße ein",
 	"Enter comma-separated \"token:bias_value\" pairs (example: 5432:100, 413:-100)": "Geben Sie kommagetrennte \"token:bias_value\"-Paare ein (Beispiel: 5432:100, 413:-100)",
-	"Enter Config in JSON format": "Konfiguration in JSON Format eingeben",
 	"Enter content for the pending user info overlay. Leave empty for default.": "Geben Sie Inhalt für das Overlay 'Ausstehende Kontoaktivierung' ein. Für Standard leer lassen.",
 	"Enter coordinates (e.g. 51.505, -0.09)": "Geben Sie Koordinaten ein (z.\u202fB. 51.505, -0.09)",
 	"Enter Datalab Marker API Base URL": "Geben Sie die Basis-URL für die Datalab Marker API ein",
 	"Enter Datalab Marker API Key": "Geben Sie den Datalab Marker API-Schlüssel ein",
 	"Enter description": "Geben Sie eine Beschreibung ein",
-	"Enter Docling OCR Engine": "Docling OCR-Engine eingeben",
-	"Enter Docling OCR Language(s)": "Docling OCR-Sprache(n) eingeben",
+	"Enter Docling API Key": "",
 	"Enter Docling Server URL": "Docling Server-URL eingeben",
 	"Enter Document Intelligence Endpoint": "Endpunkt für Document Intelligence eingeben",
 	"Enter Document Intelligence Key": "Schlüssel für Document Intelligence eingeben",
@@ -583,6 +573,7 @@
 	"Enter Firecrawl API Base URL": "Geben Sie die Firecrawl Basis-URL ein",
 	"Enter Firecrawl API Key": "Geben Sie den Firecrawl API-Schlüssel ein",
 	"Enter folder name": "Ordnernamen eingeben",
+	"Enter function name filter list (e.g. func1, !func2)": "",
 	"Enter Github Raw URL": "Geben Sie die Github Raw-URL ein",
 	"Enter Google PSE API Key": "Geben Sie den Google PSE-API-Schlüssel ein",
 	"Enter Google PSE Engine Id": "Geben Sie die Google PSE-Engine-ID ein",
@@ -731,7 +722,6 @@
 	"Failed to save models configuration": "Fehler beim Speichern der Modellkonfiguration",
 	"Failed to update settings": "Fehler beim Aktualisieren der Einstellungen",
 	"Failed to upload file.": "Fehler beim Hochladen der Datei.",
-	"fast": "schnell",
 	"Features": "Funktionalitäten",
 	"Features Permissions": "Funktionen-Berechtigungen",
 	"February": "Februar",
@@ -795,6 +785,7 @@
 	"Function is now globally disabled": "Die Funktion ist jetzt global deaktiviert",
 	"Function is now globally enabled": "Die Funktion ist jetzt global aktiviert",
 	"Function Name": "Funktionsname",
+	"Function Name Filter List": "",
 	"Function updated successfully": "Funktion erfolgreich aktualisiert",
 	"Functions": "Funktionen",
 	"Functions allow arbitrary code execution.": "Funktionen ermöglichen die Ausführung beliebigen Codes.",
@@ -887,7 +878,6 @@
 	"Import successful": "Import erfolgreich",
 	"Import Tools": "Werkzeuge importieren",
 	"Important Update": "Wichtiges Update",
-	"In order to force OCR, performing OCR must be enabled.": "Um die OCR erzwingen zu können, muss die Durchführung der OCR aktiviert sein.",
 	"Include": "Einschließen",
 	"Include `--api-auth` flag when running stable-diffusion-webui": "Fügen Sie beim Ausführen von stable-diffusion-webui die Option `--api-auth` hinzu",
 	"Include `--api` flag when running stable-diffusion-webui": "Fügen Sie beim Ausführen von stable-diffusion-webui die Option `--api` hinzu",
@@ -1196,7 +1186,6 @@
 	"OpenAPI Spec": "OpenAPI-Spezifikation",
 	"openapi.json URL or Path": "openapi.json-URL oder Pfad",
 	"Optional": "Optional",
-	"Options for running a local vision-language model in the picture description. The parameters refer to a model hosted on Hugging Face. This parameter is mutually exclusive with picture_description_api.": "Optionen zum Ausführen eines lokalen Vision-Language-Modells in der Bildbeschreibung. Die Parameter beziehen sich auf ein Modell, das auf Hugging Face gehostet wird. Dieser Parameter ist gegenseitig ausschließend mit picture_description_api.",
 	"or": "oder",
 	"Ordered List": "Geordnete Liste",
 	"Organize your users": "Organisieren Sie Ihre Benutzer",
@@ -1211,14 +1200,12 @@
 	"Password": "Passwort",
 	"Passwords do not match.": "Die Passwörter stimmen nicht überein.",
 	"Paste Large Text as File": "Großen Text als Datei einfügen",
-	"PDF Backend": "PDF-Backend",
 	"PDF document (.pdf)": "PDF-Dokument (.pdf)",
 	"PDF Extract Images (OCR)": "Text von Bildern aus PDFs extrahieren (OCR)",
 	"pending": "ausstehend",
 	"Pending": "Ausstehend",
 	"Pending User Overlay Content": "Inhalt des Overlays 'Ausstehende Kontoaktivierung'",
 	"Pending User Overlay Title": "Titel des Overlays 'Ausstehende Kontoaktivierung'",
-	"Perform OCR": "OCR durchführen",
 	"Permission denied when accessing media devices": "Zugriff auf Mediengeräte verweigert",
 	"Permission denied when accessing microphone": "Zugriff auf das Mikrofon verweigert",
 	"Permission denied when accessing microphone: {{error}}": "Zugriff auf das Mikrofon verweigert: {{error}}",
@@ -1228,14 +1215,10 @@
 	"Perplexity Search API URL": "Perplexity-Search API URL",
 	"Perplexity Search Context Usage": "Perplexity-Suchkontextnutzung",
 	"Personalization": "Personalisierung",
-	"Picture Description API Config": "Konfiguration der Bildbeschreibungs-API",
-	"Picture Description Local Config": "Lokale Konfiguration der Bildbeschreibung",
-	"Picture Description Mode": "Modus der Bildbeschreibung",
 	"Pin": "Anheften",
 	"Pinned": "Angeheftet",
 	"Pioneer insights": "Bahnbrechende Erkenntnisse",
 	"Pipe": "Pipe",
-	"Pipeline": "Pipeline",
 	"Pipeline deleted successfully": "Pipeline erfolgreich gelöscht",
 	"Pipeline downloaded successfully": "Pipeline erfolgreich heruntergeladen",
 	"Pipelines": "Pipelines",
@@ -1291,7 +1274,6 @@
 	"Pull \"{{searchValue}}\" from Ollama.com": "\"{{searchValue}}\" von Ollama.com beziehen",
 	"Pull a model from Ollama.com": "Modell von Ollama.com beziehen",
 	"Pull Model": "Modell beziehen",
-	"pypdfium2": "pypdfium2",
 	"Query Generation Prompt": "Abfragegenerierungsprompt",
 	"Querying": "Suche...",
 	"Quick Actions": "Schnellaktionen",
@@ -1369,6 +1351,7 @@
 	"Run": "Ausführen",
 	"Running": "Läuft",
 	"Running...": "Läuft...",
+	"Runs embedding tasks concurrently to speed up processing. Turn off if rate limits become an issue.": "",
 	"Save": "Speichern",
 	"Save & Create": "Erstellen",
 	"Save & Update": "Aktualisieren",
@@ -1512,7 +1495,6 @@
 	"Speech recognition error: {{error}}": "Spracherkennungsfehler: {{error}}",
 	"Speech-to-Text": "Sprache-zu-Text",
 	"Speech-to-Text Engine": "Sprache-zu-Text-Engine",
-	"standard": "Standard",
 	"Start a new conversation": "Neue Unterhaltung starten",
 	"Start of the channel": "Beginn des Kanals",
 	"Start Tag": "Start-Tag",
@@ -1544,7 +1526,6 @@
 	"System": "System",
 	"System Instructions": "Systemanweisungen",
 	"System Prompt": "System-Prompt",
-	"Table Mode": "Tabellenmodus",
 	"Tag": "Tag",
 	"Tags": "Tags",
 	"Tags Generation": "Tag-Generierung",
@@ -1737,7 +1718,6 @@
 	"View Result from **{{NAME}}**": "Ergebnis von **{{NAME}}** anzeigen",
 	"Visibility": "Sichtbarkeit",
 	"Vision": "Bilderkennung",
-	"vlm": "vlm",
 	"Voice": "Stimme",
 	"Voice Input": "Spracheingabe",
 	"Voice mode": "Sprachmodus",
